# python_training_basic

./: README.md  basic_types.py  basic_types2.py  errors.py  functions.py  main.py  pyproject.toml
