[tool.poetry]
name = "python_training_basic"
version = "0.1.0"
description = ""
authors = ["heliezer.developer <heliezer.developer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
